Add splash screen with placeholder icon

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/color_primary</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_bluetooth_chat</item>
+
+        <item name="postSplashScreenTheme">@style/Theme.BluetoothChat</item>
+    </style>
 
     <style name="Theme.BluetoothChat" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
